# FormForge_API

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  env.template  pyproject.toml  scripts.py
alembic/: env.py
alembic/versions/: 0001_initial_create_tables.py  0002_add_auth_tables.py  8295573d27c7_seed_submissions_table_with_test_data.py  f94b2d03aa3b_add_theme_column_to_forms_table.py
app/: main.py
app/api/: auth_schema.py  deps.py  form_schema.py  submission_schema.py
app/api/v1/: ai.py  auth.py  form_import.py  forms.py  submissions.py
app/application/interfaces/: form_repository.py  submission_repository.py
app/application/services/: ai_service.py  auth_service.py  excel_import_service.py  form_service.py  submission_service.py
app/core/: config.py  security.py
app/database/: seed.py
app/domain/models/: __init__.py  api_key.py  form.py  organization.py  submission.py  user.py
app/infrastructure/database/: session.py
app/infrastructure/repositories/: form_repository.py  submission_repository.py
app/models/: form.py
app/schemas/: form_schema.py
app/services/: form_service.py
